# HoldemAgentBench

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: update-leaderboard.yml
docs/: harness-benchmark.md  index.html  methodology.html  methodology.md
docs/assets/: leaderboard.js  style.css
docs/data/: leaderboard.json
docs/design/: development-plan-v2.2.md
docs/plans/: 2026-04-28-hab-mvp.md
official_runs/20260501-063651/: checksums.json  run.json
official_runs/20260501-063651/hands/: h_00001.json  h_00002.json  h_00003.json  h_00004.json  h_00005.json  h_00006.json  h_00007.json  h_00008.json  h_00009.json  h_00010.json  h_00011.json  h_00012.json  h_00013.json  h_00014.json  h_00015.json  h_00016.json  h_00017.json  h_00018.json  h_00019.json  h_00020.json  h_00021.json  h_00022.json  h_00023.json  h_00024.json  h_00025.json  h_00026.json  h_00027.json  h_00028.json  h_00029.json  h_00030.json  h_00031.json  h_00032.json  h_00033.json  h_00034.json  h_00035.json  (+15 more)
scripts/: update_leaderboard.py
tests/e2e/: test_6max_mock.py  test_quickstart_mock.py
tests/unit/: test_agent_pool_mock.py  test_analytics.py  test_claude_persistent.py  test_decision_metrics.py  test_export_run.py  test_game_master.py  test_game_master_6max.py  test_openrouter_agent.py  test_range_parser.py  test_shim_server.py  test_state.py  test_tools_equity.py  test_tools_other.py  test_translator.py
(+42 files in other folders)
